--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       muted
       loop
       id="video"
-      src="https://youtu.be/WNE24z8FhBs?si=ivH6eWbHZQvCvg53&t=72"
+      src="assets/videos/FREE STOCK VIDEO - Golf Court.mp4"
     ></video>
     <div id="main">
       <div id="page1">
